discussion/kv_engine/170541/170541_rev15_discussion.txt
======================================================================================================================
DESCRIPTION:

MB-49512: Remove tasks from custom cpuPool queue on unregister

We just need to clean up the task but we currently do so by
running it, meaning that we must wait for other tasks to
complete first. Instead, remove the tasks from the queue and
tidy them up manually.

Change-Id: Id3f52a07d693d98510ab6b3f918ad4beb1b8721d

======================================================================================================================
COMMENTS
======================================================================================================================
Author: Ben Huddleston
Date: 2022-02-14 14:23:36.000000000
Message: 
Uploaded patch set 15: Patch Set 14 was rebased.
----------------------------------------------------------------------------------------------------------------------
Author: Build Bot
Date: 2022-02-14 15:07:46.000000000
Message: 
Patch Set 15: Verified-1

Build Failed 

http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/15600/ : FAILURE

clang-tidy found the following problems:

<pre>
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/build-kv_engine-clang-tidy/tlm/deps/folly.exploded/include/folly/portability/GMock.h:32:10: error: "gmock/gmock.h" file not found [clang-diagnostic-error]
#include <gmock/gmock.h>
         ^

</pre> ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/15600/ )

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/build-kv_engine-clang-tidy/tlm/deps/folly.exploded/include/folly/portability/GMock.h:32:10:
error: "gmock/gmock.h" file not found [clang-diagnostic-error]
 ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/15600/ )

http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/43912/ : FAILURE

Failure of GoogleTest "AllBucketTypes/SingleThreadedPassiveStreamTest.ConsumerSanitizesBodyInDeletion/persistent_nexus_couchstore_magma_value_only":

<pre>
[ RUN      ] AllBucketTypes/SingleThreadedPassiveStreamTest.ConsumerSanitizesBodyInDeletion/persistent_nexus_couchstore_magma_value_only
2022-02-14T06:38:08.307173-08:00 CRITICAL NexusKVStore::snapshotVBucket: vb:0 primaryResult:false secondaryResult:true purgeSeqno:0
unknown file: error: C++ exception with description "NexusKVStore::snapshotVBucket: vb:0 primaryResult:false secondaryResult:true purgeSeqno:0" thrown in SetUp().
unknown file: error: SEH exception with code 0xc0000005 thrown in TearDown().
[  FAILED  ] AllBucketTypes/SingleThreadedPassiveStreamTest.ConsumerSanitizesBodyInDeletion/persistent_nexus_couchstore_magma_value_only, where GetParam() = ("persistent_nexus_couchstore_magma", "value_only") (63 ms)
AllBucketTypes/SingleThreadedPassiveStreamTest.ConsumerSanitizesBodyInDeletion/persistent_nexus_couchstore_magma_value_only
</pre>
 ( http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/43912/ )

http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/17647/ : FAILURE

No problems were identified. If you know why this problem occurred, please add a suitable Cause for it. ( http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/17647/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_format_9/14442/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/37026/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/16416/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.aarch64-linux/job/master/5308/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/17338/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.libFuzzer/job/master/5247/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/25746/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/18379/ : SUCCESS
----------------------------------------------------------------------------------------------------------------------
Author: Build Bot
Date: 2022-02-14 17:57:18.000000000
Message: 
Patch Set 15:

Build Failed 

http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/15600/ : FAILURE

clang-tidy found the following problems:

<pre>
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/build-kv_engine-clang-tidy/tlm/deps/folly.exploded/include/folly/portability/GMock.h:32:10: error: "gmock/gmock.h" file not found [clang-diagnostic-error]
#include <gmock/gmock.h>
         ^

</pre> ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/15600/ )

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/build-kv_engine-clang-tidy/tlm/deps/folly.exploded/include/folly/portability/GMock.h:32:10:
error: "gmock/gmock.h" file not found [clang-diagnostic-error]
 ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/15600/ )

http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/43912/ : FAILURE

Failure of GoogleTest "AllBucketTypes/SingleThreadedPassiveStreamTest.ConsumerSanitizesBodyInDeletion/persistent_nexus_couchstore_magma_value_only":

<pre>
[ RUN      ] AllBucketTypes/SingleThreadedPassiveStreamTest.ConsumerSanitizesBodyInDeletion/persistent_nexus_couchstore_magma_value_only
2022-02-14T06:38:08.307173-08:00 CRITICAL NexusKVStore::snapshotVBucket: vb:0 primaryResult:false secondaryResult:true purgeSeqno:0
unknown file: error: C++ exception with description "NexusKVStore::snapshotVBucket: vb:0 primaryResult:false secondaryResult:true purgeSeqno:0" thrown in SetUp().
unknown file: error: SEH exception with code 0xc0000005 thrown in TearDown().
[  FAILED  ] AllBucketTypes/SingleThreadedPassiveStreamTest.ConsumerSanitizesBodyInDeletion/persistent_nexus_couchstore_magma_value_only, where GetParam() = ("persistent_nexus_couchstore_magma", "value_only") (63 ms)
AllBucketTypes/SingleThreadedPassiveStreamTest.ConsumerSanitizesBodyInDeletion/persistent_nexus_couchstore_magma_value_only
</pre>
 ( http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/43912/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_format_9/14442/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/37026/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/16416/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.aarch64-linux/job/master/5308/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/17338/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.libFuzzer/job/master/5247/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/25746/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/18379/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/17659/ : SUCCESS
----------------------------------------------------------------------------------------------------------------------
